--- a/Menu and Topbar app (Windows Phone 8.1)1/App.xaml
+++ b/Menu and Topbar app (Windows Phone 8.1)1/App.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     mc:Ignorable="d">
-    
+    //comment
     <Application.Resources>
         <ResourceDictionary>
             
